fix: truncate ID text in SigningKeysFormCard

--- a/packages/console/src/components/OidcConfigs/SigningKeysFormCard.module.scss
+++ b/packages/console/src/components/OidcConfigs/SigningKeysFormCard.module.scss
@@ -13,6 +13,10 @@
   padding: 0 _.unit(2);
   border-radius: 6px;
   background-color: var(--color-bg-info-tag);
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .deleteIcon {
